<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_post"
            android:icon="@drawable/ic_post"
            android:title="@string/all_posts" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/Profile"
            android:icon="@drawable/ic_profile"
            android:visible="true" />
        <item
            android:id="@+id/nav_my_post"
            android:icon="@drawable/ic_post"
            android:title="@string/my_posts" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/sign_out" />
    </group>

</menu>
