<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="15dp">

    <ImageView
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="15dp"
        android:text="@string/update_profile"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        >


        <EditText
            android:id="@+id/editUserName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/gray_bg"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/editUserEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/gray_bg"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:hint="@string/email"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/editUserPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/gray_bg"
            android:ems="10"
            android:inputType="phone"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:hint="@string/phone"
            android:padding="10dp"
            />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/postProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:backgroundTint="@color/purple_500"
        android:indeterminate="true"
        android:indeterminateTint="@color/purple_500"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textAllCaps="false"
        android:layout_weight="1"
        android:backgroundTint="@color/purple_500"
        android:layout_marginHorizontal="20dp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>