<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="15dp">

    <ImageView
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="15dp"
        android:text="@string/therapists_profile"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:civ_border_color="@color/purple_500"
            app:civ_border_width="1dp"
            android:src="@drawable/default_profile"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
           />
        <TextView
            android:id="@+id/textUserName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_bg_holo"
            android:gravity="start"
            android:hint="@string/user_name"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/textUserEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_bg_holo"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:hint="@string/email"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/textUserPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_bg_holo"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:hint="@string/phone"
            android:padding="10dp"
            />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/postProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:backgroundTint="@color/purple_500"
        android:indeterminate="true"
        android:indeterminateTint="@color/purple_500"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />





</androidx.constraintlayout.widget.ConstraintLayout>