<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_layout"
        android:background="@color/white">


    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressLayout"
       app:layout_scrollFlags="scroll|exitUntilCollapsed"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_collapseMode="parallax"
            android:paddingBottom="20dp"
            >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_layout"
        android:paddingBottom="50dp"
        android:background="@drawable/bottom_round"
        >
        <ImageView
            android:src="@drawable/ic_baseline_arrow_back_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backBtn"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            />

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textColor="@color/white"
            android:textSize="@dimen/title"
            android:textStyle="bold"
            android:id="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            />

        <ImageView
            android:src="@drawable/ic_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editBtn"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            app:civ_border_color="@color/purple_500"
            app:civ_border_width="1dp"
            android:src="@drawable/default_profile"
            />

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_pic"
            android:text="@string/app_name"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailLayout"
        android:layout_below="@+id/main_layout"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/emailTitle"
            android:text="@string/email"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/subtitle"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/textViewUserEmail"
            android:text="@string/email"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/subtitle"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneLayout"
        android:layout_below="@+id/emailLayout"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/phoneTitle"
            android:text="@string/password"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/subtitle"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/textViewUserPhone"
            android:text="@string/phone"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/subtitle"
            />
    </RelativeLayout>

        </RelativeLayout>

    </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dim_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
       >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:id="@+id/posts_title"
            android:text="@string/my_posts"
            android:textColor="@color/black"
            android:textSize="@dimen/title"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:indeterminateTint="@color/purple_500"
            />


        <TextView
            android:id="@+id/textViewEmptyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_response"
            android:textColor="@color/purple_500"
            android:visibility="visible"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_below="@+id/posts_title"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:paddingBottom="70dp"
            android:clipToPadding="false"
            android:layout_height="wrap_content" />


    </RelativeLayout>









    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAddNewPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_add_white"
        app:fabSize="auto"
        android:layout_gravity="bottom|end"
        app:backgroundTint="@color/purple_500"
        android:contentDescription="@string/submit"
        android:layout_margin="16dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>